feat: i18n for customer pages, blocked dates triggers, phone auth fix
- Add i18n to PropertyDetails, TourDetails, Tours, Transport pages
- Patch shared components for i18n: ErrorBoundary, OptimizedImage, DataPageWrapper, pagination, dialog, carousel, HeroSearch
- Sync locale files (en/fr/rw/sw/zh) with new translation keys
- Reorder TourDetails pricing (per-person first)
- Add blocked dates triggers for auto-blocking on booking
- Create property_unavailable_dates view combining manual blocks + bookings
- Fix AvailabilityCalendar to show booking-sourced blocks as non-deletable
- Fix phone auth redirect issue with explicit navigation after OTP verification
- Improve OTP error messages for expired/invalid codes

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -42,7 +42,22 @@
     "loading": "Loading...",
     "error": "Error",
     "cancel": "Cancel",
+    "close": "Close",
+    "done": "Done",
     "somethingWentWrong": "Something went wrong.",
+    "reloadPage": "Reload Page",
+    "imageUnavailable": "Image unavailable",
+    "unableToLoadData": "Unable to load data. Please try again.",
+    "tryAgain": "Try Again",
+    "loadingData": "Loading data...",
+    "noDataFound": "No Data Found",
+    "noDataAvailable": "No data available.",
+    "refreshData": "Refresh data",
+    "goToPreviousPage": "Go to previous page",
+    "goToNextPage": "Go to next page",
+    "previousSlide": "Previous slide",
+    "nextSlide": "Next slide",
+    "morePages": "More pages",
     "loadingProperties": "Loading properties...",
     "couldNotLoadProperties": "Couldn’t load properties right now.",
     "noPublishedProperties": "No published properties yet.",
@@ -180,10 +195,14 @@
   },
   "heroSearch": {
     "where": "Where",
+    "whereQuestion": "Where?",
     "wherePlaceholder": "Search destinations",
     "suggestedDestinations": "Suggested destinations",
     "noDestinations": "No destinations found.",
     "destinationHint": "District, Rwanda",
+    "nearbyLabel": "Find what's nearby",
+    "useCurrentLocation": "Use your current location",
+    "suggestedDestination": "Suggested destination",
     "when": "When",
     "addDates": "Add dates",
     "dates": "Dates",
@@ -214,7 +233,15 @@
     "under2": "Under 2",
     "pets": "Pets",
     "bringingServiceAnimal": "Bringing a service animal?",
-    "clear": "Clear"
+    "clear": "Clear",
+    "clearAll": "Clear all",
+    "clearGuests": "Clear guests",
+    "toast": {
+      "locationNotAvailableTitle": "Location not available",
+      "geolocationNotSupported": "Geolocation is not supported.",
+      "locationPermissionDeniedTitle": "Location permission denied",
+      "enableLocationNearby": "Enable location to search nearby listings."
+    }
   },
   "hostingCta": {
     "title": "Try Hosting With Us",
@@ -307,10 +334,34 @@
     "yourTourGuide": "Your Tour Guide",
     "guideIncomplete": "Guide Profile Incomplete",
     "guideIncompleteDesc": "The tour guide's profile information is incomplete.",
+    "guideIncompleteHelp": "Please contact support if you need more details about your guide.",
+    "joined": "Joined",
     "yearsExperience": "years of experience",
     "speaks": "Speaks",
     "contactAfterBooking": "Contact details available after booking confirmation",
-    "cancellationTitle": "Cancellation & Refund Policy"
+    "cancellationTitle": "Cancellation & Refund Policy",
+    "cancellation": {
+      "popover": "Please review the cancellation policy carefully before booking. Refunds are subject to the terms specified below. Some items may be non-refundable due to advance bookings or permits.",
+      "standardTitle": "Standard Experiences (Day Tours & Activities)",
+      "standardItem1": "More than 72 hours before start time: Full refund (excluding platform service fees and payment processing fees)",
+      "standardItem2": "48–72 hours before start time: 50% refund (excluding platform service fees)",
+      "standardItem3": "Less than 48 hours before start time: No refund",
+      "standardItem4": "No-shows or late arrivals: No refund",
+      "multidayTitle": "Multi-Day, Private & Custom Experiences",
+      "multidayItem1": "More than 14 days before start date: Full refund minus non-refundable deposits and third-party costs",
+      "multidayItem2": "7–14 days before start date: 50% refund",
+      "multidayItem3": "Less than 7 days before start date: No refund",
+      "multidayItem4": "Custom or tailor-made itineraries may require non-refundable deposits, clearly disclosed at booking",
+      "nonRefundableTitle": "Non-Refundable Costs",
+      "nonRefundableIntro": "Some components are non-refundable once booked, including but not limited to:",
+      "nonRefundableItem1": "National park and conservation permits",
+      "nonRefundableItem2": "Gorilla trekking and special access permits",
+      "nonRefundableItem3": "Third-party accommodation, transport, flights, or activity tickets",
+      "nonRefundableItem4": "Experiences marked \"Non-Refundable\" on the listing page",
+      "customTitle": "Custom Cancellation Policy",
+      "viewFullPdf": "View Full Cancellation Policy (PDF)",
+      "nonRefundableItems": "Non-refundable Items"
+    }
   },
   "transport": {
     "title": "Transportation Services",
@@ -447,6 +498,8 @@
     "viewAll": "View all",
     "description": "Description",
     "morePhotos": "More photos",
+    "openPhoto": "Open photo",
+    "photoAlt": "Photo",
     "toursAndTransport": "Tours & Transport",
     "viewTours": "View tours",
     "viewTransport": "View transport",
@@ -454,10 +507,37 @@
     "noToursFound": "No tours found yet.",
     "transportVehicles": "Transport vehicles",
     "noTransportFound": "No transport vehicles found yet.",
+    "bedrooms": "{{count}} bedroom",
+    "bedrooms_plural": "{{count}} bedrooms",
+    "beds": "{{count}} bed",
+    "beds_plural": "{{count}} beds",
+    "bathrooms": "{{count}} bathroom",
+    "bathrooms_plural": "{{count}} bathrooms",
+    "viewHostProfile": "View host profile",
+    "hostAlt": "Host",
     "unavailableDates": "Unavailable Dates:",
     "selectValidDates": "Select valid dates to see total.",
     "yes": "Yes",
-    "no": "No"
+    "no": "No",
+    "discounts": {
+      "weekly": "Weekly discount",
+      "monthly": "Monthly discount"
+    },
+    "toast": {
+      "addStayFirstTitle": "Add to Trip Cart first",
+      "addStayFirstDesc": "Please add this stay to your Trip Cart, then proceed to checkout.",
+      "invalidDatesTitle": "Invalid dates",
+      "invalidDatesSelect": "Please select check-in and check-out dates.",
+      "invalidDatesOrder": "Check-out must be after check-in.",
+      "invalidGuestsTitle": "Invalid guests",
+      "invalidGuestsMin": "Guests must be at least 1.",
+      "tooManyGuestsTitle": "Too many guests",
+      "tooManyGuestsDesc": "Max guests for this property is {{count}}."
+    },
+    "loyalty": {
+      "earnPointsHint": "Earn points by completing your profile.",
+      "discountApplied": "Discount applied:"
+    }
   },
   "services": {
     "heroTitle": "Our Comprehensive Services",
