--- a/src/i18n/locales/fr.json
+++ b/src/i18n/locales/fr.json
@@ -42,7 +42,22 @@
     "loading": "Chargement...",
     "error": "Erreur",
     "cancel": "Annuler",
+    "close": "Fermer",
+    "done": "Terminé",
     "somethingWentWrong": "Une erreur s’est produite.",
+    "reloadPage": "Recharger la page",
+    "imageUnavailable": "Image indisponible",
+    "unableToLoadData": "Impossible de charger les données. Veuillez réessayer.",
+    "tryAgain": "Réessayer",
+    "loadingData": "Chargement des données...",
+    "noDataFound": "Aucune donnée trouvée",
+    "noDataAvailable": "Aucune donnée disponible.",
+    "refreshData": "Actualiser les données",
+    "goToPreviousPage": "Aller à la page précédente",
+    "goToNextPage": "Aller à la page suivante",
+    "previousSlide": "Diapositive précédente",
+    "nextSlide": "Diapositive suivante",
+    "morePages": "Plus de pages",
     "loadingProperties": "Chargement des hébergements...",
     "couldNotLoadProperties": "Impossible de charger les hébergements pour le moment.",
     "noPublishedProperties": "Aucun hébergement publié pour le moment.",
@@ -178,10 +193,14 @@
   },
   "heroSearch": {
     "where": "Où",
+    "whereQuestion": "Où ?",
     "wherePlaceholder": "Rechercher une destination",
     "suggestedDestinations": "Destinations suggérées",
     "noDestinations": "Aucune destination trouvée.",
     "destinationHint": "District, Rwanda",
+    "nearbyLabel": "Trouver ce qu’il y a à proximité",
+    "useCurrentLocation": "Utiliser votre position actuelle",
+    "suggestedDestination": "Destination suggérée",
     "when": "Quand",
     "addDates": "Ajouter des dates",
     "dates": "Dates",
@@ -212,7 +231,15 @@
     "under2": "Moins de 2 ans",
     "pets": "Animaux",
     "bringingServiceAnimal": "Vous avez un animal d’assistance ?",
-    "clear": "Effacer"
+    "clear": "Effacer",
+    "clearAll": "Tout effacer",
+    "clearGuests": "Effacer les voyageurs",
+    "toast": {
+      "locationNotAvailableTitle": "Localisation indisponible",
+      "geolocationNotSupported": "La géolocalisation n’est pas prise en charge.",
+      "locationPermissionDeniedTitle": "Autorisation de localisation refusée",
+      "enableLocationNearby": "Activez la localisation pour rechercher des annonces à proximité."
+    }
   },
   "hostingCta": {
     "title": "Devenez hôte avec nous",
@@ -285,10 +312,34 @@
     "yourTourGuide": "Votre guide",
     "guideIncomplete": "Profil du guide incomplet",
     "guideIncompleteDesc": "Le profil du guide est incomplet.",
+    "guideIncompleteHelp": "Veuillez contacter l’assistance si vous avez besoin de plus de détails sur votre guide.",
+    "joined": "Inscrit",
     "yearsExperience": "années d'expérience",
     "speaks": "Parle",
     "contactAfterBooking": "Coordonnées disponibles après confirmation",
-    "cancellationTitle": "Politique d'annulation et de remboursement"
+    "cancellationTitle": "Politique d'annulation et de remboursement",
+    "cancellation": {
+      "popover": "Veuillez lire attentivement la politique d’annulation avant de réserver. Les remboursements sont soumis aux conditions ci-dessous. Certains éléments peuvent être non remboursables en raison de réservations anticipées ou de permis.",
+      "standardTitle": "Expériences standard (excursions à la journée & activités)",
+      "standardItem1": "Plus de 72 h avant l’heure de début : remboursement intégral (hors frais de service de la plateforme et frais de traitement)",
+      "standardItem2": "48–72 h avant l’heure de début : remboursement à 50 % (hors frais de service de la plateforme)",
+      "standardItem3": "Moins de 48 h avant l’heure de début : aucun remboursement",
+      "standardItem4": "Absence ou arrivée tardive : aucun remboursement",
+      "multidayTitle": "Expériences sur plusieurs jours, privées & sur mesure",
+      "multidayItem1": "Plus de 14 jours avant la date de début : remboursement intégral moins les acomptes non remboursables et les coûts tiers",
+      "multidayItem2": "7–14 jours avant la date de début : remboursement à 50 %",
+      "multidayItem3": "Moins de 7 jours avant la date de début : aucun remboursement",
+      "multidayItem4": "Les itinéraires sur mesure peuvent nécessiter des acomptes non remboursables, clairement indiqués lors de la réservation",
+      "nonRefundableTitle": "Coûts non remboursables",
+      "nonRefundableIntro": "Certains éléments ne sont pas remboursables une fois réservés, y compris (sans s’y limiter) :",
+      "nonRefundableItem1": "Permis des parcs nationaux et de conservation",
+      "nonRefundableItem2": "Permis de trek des gorilles et permis d’accès spécial",
+      "nonRefundableItem3": "Hébergement, transport, vols ou billets d’activités de tiers",
+      "nonRefundableItem4": "Expériences marquées \"Non remboursable\" sur la page de l’annonce",
+      "customTitle": "Politique d’annulation personnalisée",
+      "viewFullPdf": "Voir la politique complète (PDF)",
+      "nonRefundableItems": "Éléments non remboursables"
+    }
   },
   "transport": {
     "title": "Services de transport",
@@ -365,6 +416,8 @@
     "viewAll": "Voir tout",
     "description": "Description",
     "morePhotos": "Plus de photos",
+    "openPhoto": "Ouvrir la photo",
+    "photoAlt": "Photo",
     "toursAndTransport": "Circuits & Transport",
     "viewTours": "Voir les circuits",
     "viewTransport": "Voir le transport",
@@ -372,10 +425,37 @@
     "noToursFound": "Aucun circuit trouvé.",
     "transportVehicles": "Véhicules de transport",
     "noTransportFound": "Aucun véhicule de transport trouvé.",
+    "bedrooms": "{{count}} chambre",
+    "bedrooms_plural": "{{count}} chambres",
+    "beds": "{{count}} lit",
+    "beds_plural": "{{count}} lits",
+    "bathrooms": "{{count}} salle de bain",
+    "bathrooms_plural": "{{count}} salles de bain",
+    "viewHostProfile": "Voir le profil de l’hôte",
+    "hostAlt": "Hôte",
     "unavailableDates": "Dates indisponibles :",
     "selectValidDates": "Sélectionnez des dates valides pour voir le total.",
     "yes": "Oui",
-    "no": "Non"
+    "no": "Non",
+    "discounts": {
+      "weekly": "Réduction hebdomadaire",
+      "monthly": "Réduction mensuelle"
+    },
+    "toast": {
+      "addStayFirstTitle": "Ajoutez d’abord au panier voyage",
+      "addStayFirstDesc": "Veuillez ajouter ce séjour à votre panier voyage, puis passez au paiement.",
+      "invalidDatesTitle": "Dates invalides",
+      "invalidDatesSelect": "Veuillez sélectionner les dates d’arrivée et de départ.",
+      "invalidDatesOrder": "La date de départ doit être après la date d’arrivée.",
+      "invalidGuestsTitle": "Voyageurs invalides",
+      "invalidGuestsMin": "Le nombre de voyageurs doit être au moins 1.",
+      "tooManyGuestsTitle": "Trop de voyageurs",
+      "tooManyGuestsDesc": "Le maximum pour ce logement est {{count}}."
+    },
+    "loyalty": {
+      "earnPointsHint": "Gagnez des points en complétant votre profil.",
+      "discountApplied": "Réduction appliquée :"
+    }
   },
   "services": {
     "heroTitle": "Nos services complets",
