--- a/src/i18n/locales/rw.json
+++ b/src/i18n/locales/rw.json
@@ -42,7 +42,22 @@
     "loading": "Birimo gupakira...",
     "error": "Ikosa",
     "cancel": "Hagarika",
+    "close": "Funga",
+    "done": "Byarangiye",
     "somethingWentWrong": "Hari ikibazo cyabaye.",
+    "reloadPage": "Ongera utangire urupapuro",
+    "imageUnavailable": "Ifoto ntibonetse",
+    "unableToLoadData": "Ntibishoboye gupakira amakuru. Ongera ugerageze.",
+    "tryAgain": "Ongera ugerageze",
+    "loadingData": "Turimo gupakira amakuru...",
+    "noDataFound": "Nta makuru yabonetse",
+    "noDataAvailable": "Nta makuru ahari.",
+    "refreshData": "Ongera usubiremo amakuru",
+    "goToPreviousPage": "Jya ku rupapuro rubanziriza",
+    "goToNextPage": "Jya ku rupapuro rukurikira",
+    "previousSlide": "Islide ibanza",
+    "nextSlide": "Islide ikurikira",
+    "morePages": "Andi mapaji",
     "loadingProperties": "Turimo gupakira amacumbi...",
     "couldNotLoadProperties": "Ntitwabashije kubona amacumbi ubu.",
     "noPublishedProperties": "Nta macumbi yatangajwe ubu.",
@@ -178,10 +193,14 @@
   },
   "heroSearch": {
     "where": "He",
+    "whereQuestion": "Hehe?",
     "wherePlaceholder": "Shakisha aho ujya",
     "suggestedDestinations": "Aho wakwerekeza",
     "noDestinations": "Nta hantu habonetse.",
     "destinationHint": "Akarere, u Rwanda",
+    "nearbyLabel": "Shakisha hafi yawe",
+    "useCurrentLocation": "Koresha aho uri ubu",
+    "suggestedDestination": "Aho wasabwa",
     "when": "Ryari",
     "addDates": "Ongeramo amatariki",
     "dates": "Amatariki",
@@ -212,7 +231,15 @@
     "under2": "Munsi y’imyaka 2",
     "pets": "Amatungo",
     "bringingServiceAnimal": "Ufite itungo rimufasha?",
-    "clear": "Siba"
+    "clear": "Siba",
+    "clearAll": "Siba byose",
+    "clearGuests": "Siba abashyitsi",
+    "toast": {
+      "locationNotAvailableTitle": "Ahantu ntihabonetse",
+      "geolocationNotSupported": "Gukurikirana aho uri ntibishyigikiwe.",
+      "locationPermissionDeniedTitle": "Uruhushya rw’aho uri rwanze",
+      "enableLocationNearby": "Fungura location kugira ngo ushakishe hafi yawe."
+    }
   },
   "hostingCta": {
     "title": "Tangira kwakira abashyitsi",
@@ -285,10 +312,34 @@
     "yourTourGuide": "Umuyobozi wawe",
     "guideIncomplete": "Umwirondoro w'umuyobozi ntuzuye",
     "guideIncompleteDesc": "Amakuru y'umuyobozi ntayuzuye.",
+    "guideIncompleteHelp": "Nyamuneka hamagara ubufasha niba ukeneye ibindi bisobanuro ku muyobozi wawe.",
+    "joined": "Yinjiye",
     "yearsExperience": "imyaka y'uburambe",
     "speaks": "Avuga",
     "contactAfterBooking": "Amakuru yo kumugeraho azaboneka nyuma yo kwemeza",
-    "cancellationTitle": "Politiki yo guhagarika no gusubizwa amafaranga"
+    "cancellationTitle": "Politiki yo guhagarika no gusubizwa amafaranga",
+    "cancellation": {
+      "popover": "Nyamuneka soma neza politiki yo guhagarika mbere yo kubika. Gusubizwa amafaranga bikorwa hashingiwe ku mabwiriza ari hepfo. Bimwe mu bintu bishobora kutasubizwa kubera kubika mbere cyangwa impushya.",
+      "standardTitle": "Uburambe busanzwe (Ingendo z'umunsi & ibikorwa)",
+      "standardItem1": "Mbere y'amasaha 72 uhereye ku gutangira: Gusubizwa yose (hatabariwemo amafaranga ya platform n'amafaranga yo gutunganya kwishyura)",
+      "standardItem2": "Amasaha 48–72 mbere yo gutangira: Gusubizwa 50% (hatabariwemo amafaranga ya platform)",
+      "standardItem3": "Munsi y'amasaha 48 mbere yo gutangira: Nta gusubizwa",
+      "standardItem4": "Kutaza cyangwa kuhagera utinze: Nta gusubizwa",
+      "multidayTitle": "Ingendo z'iminsi myinshi, izihariye & izateguwe",
+      "multidayItem1": "Mbere y'iminsi 14 yo gutangira: Gusubizwa yose ukuyemo amafaranga atasubizwa n'ibyakoreshejwe n'abandi",
+      "multidayItem2": "Iminsi 7–14 mbere yo gutangira: Gusubizwa 50%",
+      "multidayItem3": "Munsi y'iminsi 7 mbere yo gutangira: Nta gusubizwa",
+      "multidayItem4": "Ingendo zateguwe zishobora gusaba depozit itasubizwa, bigasobanurwa igihe ubika",
+      "nonRefundableTitle": "Ibiciro bitasubizwa",
+      "nonRefundableIntro": "Bimwe mu bice ntibisubizwa umaze kubika, harimo ariko ntibigarakire kuri:",
+      "nonRefundableItem1": "Impushya za pariki z'igihugu n'iby'ubungabunga",
+      "nonRefundableItem2": "Impushya zo gutembera ingagi n'iz'uburenganzira bwihariye",
+      "nonRefundableItem3": "Icumbi, ubwikorezi, indege cyangwa amatike y'ibikorwa by'abandi",
+      "nonRefundableItem4": "Uburambe bwerekanywe nka \"Bidasubizwa\" ku rupapuro",
+      "customTitle": "Politiki yo guhagarika yihariye",
+      "viewFullPdf": "Reba politiki yose (PDF)",
+      "nonRefundableItems": "Ibidasubizwa"
+    }
   },
   "transport": {
     "title": "Serivisi z'ubwikorezi",
@@ -365,6 +416,8 @@
     "viewAll": "Reba byose",
     "description": "Ibisobanuro",
     "morePhotos": "Amafoto menshi",
+    "openPhoto": "Fungura ifoto",
+    "photoAlt": "Ifoto",
     "toursAndTransport": "Ingendo & Ubwikorezi",
     "viewTours": "Reba ingendo",
     "viewTransport": "Reba ubwikorezi",
@@ -372,10 +425,37 @@
     "noToursFound": "Nta ngendo zibonetse.",
     "transportVehicles": "Imodoka z'ubwikorezi",
     "noTransportFound": "Nta modoka z'ubwikorezi zibonetse.",
+    "bedrooms": "{{count}} icyumba cyo kuryamamo",
+    "bedrooms_plural": "{{count}} ibyumba byo kuryamamo",
+    "beds": "{{count}} uburiri",
+    "beds_plural": "{{count}} uburiri",
+    "bathrooms": "{{count}} ubwiherero",
+    "bathrooms_plural": "{{count}} ubwiherero",
+    "viewHostProfile": "Reba umwirondoro w'uwakiriye",
+    "hostAlt": "Uwakiriye",
     "unavailableDates": "Amatariki adahari:",
     "selectValidDates": "Hitamo amatariki kugira ngo urebe igiteranyo.",
     "yes": "Yego",
-    "no": "Oya"
+    "no": "Oya",
+    "discounts": {
+      "weekly": "Igabanuka ry'icyumweru",
+      "monthly": "Igabanuka ry'ukwezi"
+    },
+    "toast": {
+      "addStayFirstTitle": "Banze wongere mu gatebo k'urugendo",
+      "addStayFirstDesc": "Nyamuneka ongera iri cumba mu gatebo k'urugendo, hanyuma ukomeze kwishyura.",
+      "invalidDatesTitle": "Amatariki atemewe",
+      "invalidDatesSelect": "Nyamuneka hitamo amatariki yo kwinjira no gusohoka.",
+      "invalidDatesOrder": "Itariki yo gusohoka igomba kuba nyuma y'iyo kwinjira.",
+      "invalidGuestsTitle": "Abashyitsi batemewe",
+      "invalidGuestsMin": "Abashyitsi bagomba kuba nibura 1.",
+      "tooManyGuestsTitle": "Abashyitsi ni benshi cyane",
+      "tooManyGuestsDesc": "Abashyitsi ntarengwa kuri iri cumba ni {{count}}."
+    },
+    "loyalty": {
+      "earnPointsHint": "Bona amanota wuzuza umwirondoro wawe.",
+      "discountApplied": "Igabanuka ryashyizweho:"
+    }
   },
   "services": {
     "heroTitle": "Serivisi zacu zose",
