--- a/src/i18n/locales/sw.json
+++ b/src/i18n/locales/sw.json
@@ -10,7 +10,8 @@
   "actions": {
     "tripCart": "Kikapu cha safari",
     "signIn": "Ingia",
-    "signOut": "Toka",
+      "close": "Funga",
+      "done": "Imekamilika",
     "myBookings": "Uhifadhi wangu",
     "favorites": "Vipendwa",
     "adminDashboard": "Dashibodi ya Admin",
@@ -42,7 +43,22 @@
     "loading": "Inapakia...",
     "error": "Hitilafu",
     "cancel": "Ghairi",
+    "close": "Funga",
+    "done": "Imekamilika",
     "somethingWentWrong": "Kuna tatizo limetokea.",
+    "reloadPage": "Pakia upya ukurasa",
+    "imageUnavailable": "Picha haipatikani",
+    "unableToLoadData": "Imeshindikana kupakia data. Tafadhali jaribu tena.",
+    "tryAgain": "Jaribu tena",
+    "loadingData": "Inapakia data...",
+    "noDataFound": "Hakuna data iliyopatikana",
+    "noDataAvailable": "Hakuna data inayopatikana.",
+    "refreshData": "Sasisha data",
+    "goToPreviousPage": "Nenda ukurasa uliopita",
+    "goToNextPage": "Nenda ukurasa unaofuata",
+    "previousSlide": "Slaidi iliyopita",
+    "nextSlide": "Slaidi inayofuata",
+    "morePages": "Kurasa zaidi",
     "loadingProperties": "Inapakia malazi...",
     "couldNotLoadProperties": "Imeshindikana kupakia malazi kwa sasa.",
     "noPublishedProperties": "Bado hakuna malazi yaliyochapishwa.",
@@ -178,10 +194,14 @@
   },
   "heroSearch": {
     "where": "Wapi",
+    "whereQuestion": "Wapi?",
     "wherePlaceholder": "Tafuta maeneo",
     "suggestedDestinations": "Maeneo yaliyopendekezwa",
     "noDestinations": "Hakuna maeneo yaliyopatikana.",
     "destinationHint": "Wilaya, Rwanda",
+    "nearbyLabel": "Tafuta yaliyo karibu",
+    "useCurrentLocation": "Tumia eneo ulipo sasa",
+    "suggestedDestination": "Eneo lililopendekezwa",
     "when": "Lini",
     "addDates": "Ongeza tarehe",
     "dates": "Tarehe",
@@ -212,7 +232,15 @@
     "under2": "Chini ya miaka 2",
     "pets": "Wanyama",
     "bringingServiceAnimal": "Unaleta mnyama wa huduma?",
-    "clear": "Futa"
+    "clear": "Futa",
+    "clearAll": "Futa yote",
+    "clearGuests": "Futa wageni",
+    "toast": {
+      "locationNotAvailableTitle": "Eneo halipatikani",
+      "geolocationNotSupported": "Geolocation haijaungwa mkono.",
+      "locationPermissionDeniedTitle": "Ruhusa ya eneo imekataliwa",
+      "enableLocationNearby": "Washa eneo ili utafute matangazo yaliyo karibu."
+    }
   },
   "hostingCta": {
     "title": "Jaribu Ukarimu Nasi",
@@ -286,10 +314,34 @@
     "yourTourGuide": "Mwongozaji wako",
     "guideIncomplete": "Wasifu wa mwongozaji haujakamilika",
     "guideIncompleteDesc": "Taarifa za mwongozaji hazijakamilika.",
+    "guideIncompleteHelp": "Tafadhali wasiliana na usaidizi ikiwa unahitaji maelezo zaidi kuhusu mwongoza wako.",
+    "joined": "Alijiunga",
     "yearsExperience": "miaka ya uzoefu",
     "speaks": "Anazungumza",
     "contactAfterBooking": "Maelezo ya mawasiliano yatapatikana baada ya kuthibitisha",
-    "cancellationTitle": "Sera ya kufuta na kurejesha pesa"
+    "cancellationTitle": "Sera ya kufuta na kurejesha pesa",
+    "cancellation": {
+      "popover": "Tafadhali kagua sera ya kughairi kwa makini kabla ya kuweka nafasi. Marejesho yanategemea masharti yaliyo hapa chini. Baadhi ya vipengele vinaweza visiwe na marejesho kutokana na ruhusa au miadi ya mapema.",
+      "standardTitle": "Matukio ya kawaida (Ziara za siku & Shughuli)",
+      "standardItem1": "Zaidi ya saa 72 kabla ya kuanza: Marejesho kamili (isipokuwa ada za huduma za jukwaa na ada za uchakataji wa malipo)",
+      "standardItem2": "Saa 48–72 kabla ya kuanza: Marejesho ya 50% (isipokuwa ada za huduma za jukwaa)",
+      "standardItem3": "Chini ya saa 48 kabla ya kuanza: Hakuna marejesho",
+      "standardItem4": "Kutokutokea au kuchelewa: Hakuna marejesho",
+      "multidayTitle": "Matukio ya siku nyingi, ya binafsi & maalum",
+      "multidayItem1": "Zaidi ya siku 14 kabla ya kuanza: Marejesho kamili ukiondoa amana zisizorejeshwa na gharama za wahusika wengine",
+      "multidayItem2": "Siku 7–14 kabla ya kuanza: Marejesho ya 50%",
+      "multidayItem3": "Chini ya siku 7 kabla ya kuanza: Hakuna marejesho",
+      "multidayItem4": "Ratiba maalum zinaweza kuhitaji amana zisizorejeshwa, zitakazoelezwa wakati wa kuweka nafasi",
+      "nonRefundableTitle": "Gharama zisizorejeshwa",
+      "nonRefundableIntro": "Baadhi ya vipengele haviwezi kurejeshwa baada ya kuweka nafasi, ikiwemo lakini si tu:",
+      "nonRefundableItem1": "Ruhusa za hifadhi za taifa na uhifadhi",
+      "nonRefundableItem2": "Ruhusa za trek ya gorilla na ruhusa maalum",
+      "nonRefundableItem3": "Malazi, usafiri, ndege, au tiketi za shughuli za wahusika wengine",
+      "nonRefundableItem4": "Matukio yaliyoandikwa \"Hayarejeshwi\" kwenye ukurasa wa orodha",
+      "customTitle": "Sera ya kughairi maalum",
+      "viewFullPdf": "Tazama sera kamili (PDF)",
+      "nonRefundableItems": "Vipengele visivyorejeshwa"
+    }
   },
   "transport": {
     "title": "Huduma za usafiri",
@@ -366,6 +418,8 @@
     "viewAll": "Tazama yote",
     "description": "Maelezo",
     "morePhotos": "Picha zaidi",
+    "openPhoto": "Fungua picha",
+    "photoAlt": "Picha",
     "toursAndTransport": "Ziara & Usafiri",
     "viewTours": "Tazama ziara",
     "viewTransport": "Tazama usafiri",
@@ -373,10 +427,37 @@
     "noToursFound": "Hakuna ziara zilizopatikana.",
     "transportVehicles": "Magari ya usafiri",
     "noTransportFound": "Hakuna magari ya usafiri yaliyopatikana.",
+    "bedrooms": "{{count}} chumba cha kulala",
+    "bedrooms_plural": "{{count}} vyumba vya kulala",
+    "beds": "{{count}} kitanda",
+    "beds_plural": "{{count}} vitanda",
+    "bathrooms": "{{count}} bafu",
+    "bathrooms_plural": "{{count}} mabafu",
+    "viewHostProfile": "Tazama wasifu wa mwenyeji",
+    "hostAlt": "Mwenyeji",
     "unavailableDates": "Tarehe zisizopatikana:",
     "selectValidDates": "Chagua tarehe halali ili kuona jumla.",
     "yes": "Ndiyo",
-    "no": "Hapana"
+    "no": "Hapana",
+    "discounts": {
+      "weekly": "Punguzo la wiki",
+      "monthly": "Punguzo la mwezi"
+    },
+    "toast": {
+      "addStayFirstTitle": "Ongeza kwenye Kikapu cha Safari kwanza",
+      "addStayFirstDesc": "Tafadhali ongeza malazi haya kwenye Kikapu cha Safari, kisha endelea kulipa.",
+      "invalidDatesTitle": "Tarehe batili",
+      "invalidDatesSelect": "Tafadhali chagua tarehe ya kuingia na kutoka.",
+      "invalidDatesOrder": "Tarehe ya kutoka lazima iwe baada ya tarehe ya kuingia.",
+      "invalidGuestsTitle": "Wageni batili",
+      "invalidGuestsMin": "Wageni lazima wawe angalau 1.",
+      "tooManyGuestsTitle": "Wageni wengi sana",
+      "tooManyGuestsDesc": "Idadi ya juu ya wageni kwa malazi haya ni {{count}}."
+    },
+    "loyalty": {
+      "earnPointsHint": "Pata pointi kwa kukamilisha wasifu wako.",
+      "discountApplied": "Punguzo limetumika:"
+    }
   },
   "services": {
     "heroTitle": "Huduma zetu kamili",
