--- a/src/i18n/locales/zh.json
+++ b/src/i18n/locales/zh.json
@@ -42,7 +42,22 @@
     "loading": "加载中...",
     "error": "错误",
     "cancel": "取消",
+    "close": "关闭",
+    "done": "完成",
     "somethingWentWrong": "出现了一些问题。",
+    "reloadPage": "重新加载页面",
+    "imageUnavailable": "图片不可用",
+    "unableToLoadData": "无法加载数据，请重试。",
+    "tryAgain": "重试",
+    "loadingData": "正在加载数据...",
+    "noDataFound": "未找到数据",
+    "noDataAvailable": "暂无数据。",
+    "refreshData": "刷新数据",
+    "goToPreviousPage": "前往上一页",
+    "goToNextPage": "前往下一页",
+    "previousSlide": "上一张幻灯片",
+    "nextSlide": "下一张幻灯片",
+    "morePages": "更多页面",
     "loadingProperties": "正在加载住宿...",
     "couldNotLoadProperties": "暂时无法加载住宿。",
     "noPublishedProperties": "暂时没有已发布的住宿。",
@@ -178,10 +193,14 @@
   },
   "heroSearch": {
     "where": "目的地",
+    "whereQuestion": "目的地？",
     "wherePlaceholder": "搜索目的地",
     "suggestedDestinations": "推荐目的地",
     "noDestinations": "未找到目的地。",
     "destinationHint": "地区，卢旺达",
+    "nearbyLabel": "查找附近",
+    "useCurrentLocation": "使用当前位置",
+    "suggestedDestination": "推荐目的地",
     "when": "日期",
     "addDates": "添加日期",
     "dates": "日期",
@@ -212,7 +231,15 @@
     "under2": "2 岁以下",
     "pets": "宠物",
     "bringingServiceAnimal": "携带服务类动物？",
-    "clear": "清除"
+    "clear": "清除",
+    "clearAll": "全部清除",
+    "clearGuests": "清除人数",
+    "toast": {
+      "locationNotAvailableTitle": "位置不可用",
+      "geolocationNotSupported": "不支持地理定位。",
+      "locationPermissionDeniedTitle": "位置权限被拒绝",
+      "enableLocationNearby": "请开启位置权限以搜索附近房源。"
+    }
   },
   "hostingCta": {
     "title": "加入我们成为房东",
@@ -286,10 +313,34 @@
     "yourTourGuide": "您的导游",
     "guideIncomplete": "导游资料不完整",
     "guideIncompleteDesc": "导游的个人资料信息不完整。",
+    "guideIncompleteHelp": "如需更多导游信息，请联系支持。",
+    "joined": "加入于",
     "yearsExperience": "年经验",
     "speaks": "会说",
     "contactAfterBooking": "预订确认后提供联系方式",
-    "cancellationTitle": "取消与退款政策"
+    "cancellationTitle": "取消与退款政策",
+    "cancellation": {
+      "popover": "预订前请仔细阅读取消政策。退款将遵循以下条款。由于提前预订或许可证等原因，部分项目可能不可退款。",
+      "standardTitle": "标准体验（当日游与活动）",
+      "standardItem1": "开始时间前72小时以上：全额退款（不含平台服务费和支付处理费）",
+      "standardItem2": "开始时间前48–72小时：50%退款（不含平台服务费）",
+      "standardItem3": "开始时间前48小时以内：不退款",
+      "standardItem4": "爽约或迟到：不退款",
+      "multidayTitle": "多日、私人及定制体验",
+      "multidayItem1": "开始日期前14天以上：全额退款，扣除不可退押金及第三方费用",
+      "multidayItem2": "开始日期前7–14天：50%退款",
+      "multidayItem3": "开始日期前7天以内：不退款",
+      "multidayItem4": "定制行程可能需要不可退押金，预订时将清晰披露",
+      "nonRefundableTitle": "不可退款费用",
+      "nonRefundableIntro": "部分项目在预订后不可退款，包括但不限于：",
+      "nonRefundableItem1": "国家公园与保护区许可证",
+      "nonRefundableItem2": "大猩猩徒步及特殊通行许可证",
+      "nonRefundableItem3": "第三方住宿、交通、航班或活动门票",
+      "nonRefundableItem4": "在列表页标注为“不可退款”的体验",
+      "customTitle": "自定义取消政策",
+      "viewFullPdf": "查看完整取消政策（PDF）",
+      "nonRefundableItems": "不可退款项目"
+    }
   },
   "transport": {
     "title": "交通服务",
@@ -366,6 +417,34 @@
     "viewAll": "查看全部",
     "description": "描述",
     "morePhotos": "更多照片",
+    "openPhoto": "打开照片",
+    "photoAlt": "物业照片",
+    "bedrooms": "{count} 间卧室",
+    "bedrooms_plural": "{count} 间卧室",
+    "beds": "{count} 张床",
+    "beds_plural": "{count} 张床",
+    "bathrooms": "{count} 间浴室",
+    "bathrooms_plural": "{count} 间浴室",
+    "viewHostProfile": "查看房东资料",
+    "hostAlt": "房东头像",
+    "discounts": {
+      "monthly": "每月折扣",
+      "weekly": "每周折扣"
+    },
+    "toast": {
+      "addCartFirstTitle": "请先添加到行程购物车",
+      "addCartFirstDesc": "请先将此住宿加入您的行程购物车，然后再预订。",
+      "invalidDatesTitle": "日期无效",
+      "invalidDatesDesc": "请选择有效的入住和退房日期。",
+      "invalidGuestsTitle": "入住人数无效",
+      "invalidGuestsDesc": "请选择至少 1 位客人。",
+      "tooManyGuestsTitle": "客人过多",
+      "tooManyGuestsDesc": "此住宿最多可容纳 {count} 位客人。"
+    },
+    "loyalty": {
+      "earnPointsHint": "完成个人资料可赚取积分。",
+      "discountApplied": "已应用折扣："
+    },
     "toursAndTransport": "游览与交通",
     "viewTours": "查看游览",
     "viewTransport": "查看交通",
