feat: add tiered pricing by residency for tours
- Add 3-tier pricing: National Citizens, East African, Foreign Tourists
- Update CreateTourPackage with 3-column pricing inputs
- Update CreateTour with same differential pricing options
- Display residency pricing on TourDetails page
- Add translations for pricing labels (en/fr/rw/sw/zh)
- Migration adds price_for_east_african to tour_packages and tours tables

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -331,6 +331,11 @@
     "singlePerson": "Single person",
     "groupOf": "Group of {{count}} people",
     "perPerson": "per person",
+    "pricingByResidency": "Pricing by Residency",
+    "nationalCitizens": "National Citizens",
+    "eastAfrican": "East African",
+    "foreignTourists": "Foreign Tourists",
+    "residencyNote": "Select your residency status at checkout",
     "yourTourGuide": "Your Tour Guide",
     "guideIncomplete": "Guide Profile Incomplete",
     "guideIncompleteDesc": "The tour guide's profile information is incomplete.",
