--- a/src/i18n/locales/fr.json
+++ b/src/i18n/locales/fr.json
@@ -309,6 +309,11 @@
     "singlePerson": "Personne seule",
     "groupOf": "Groupe de {{count}} personnes",
     "perPerson": "par personne",
+    "pricingByResidency": "Tarifs par résidence",
+    "nationalCitizens": "Citoyens nationaux",
+    "eastAfrican": "Afrique de l'Est",
+    "foreignTourists": "Touristes étrangers",
+    "residencyNote": "Sélectionnez votre statut de résidence lors du paiement",
     "yourTourGuide": "Votre guide",
     "guideIncomplete": "Profil du guide incomplet",
     "guideIncompleteDesc": "Le profil du guide est incomplet.",
