--- a/src/i18n/locales/rw.json
+++ b/src/i18n/locales/rw.json
@@ -309,6 +309,11 @@
     "singlePerson": "Umuntu umwe",
     "groupOf": "Itsinda ry'abantu {{count}}",
     "perPerson": "ku muntu",
+    "pricingByResidency": "Ibiciro ukurikije aho utuye",
+    "nationalCitizens": "Abenegihugu",
+    "eastAfrican": "Abaturage ba Afurika y'Iburasirazuba",
+    "foreignTourists": "Abashyitsi b'amahanga",
+    "residencyNote": "Hitamo aho utuye mugihe urishyura",
     "yourTourGuide": "Umuyobozi wawe",
     "guideIncomplete": "Umwirondoro w'umuyobozi ntuzuye",
     "guideIncompleteDesc": "Amakuru y'umuyobozi ntayuzuye.",
