--- a/src/i18n/locales/sw.json
+++ b/src/i18n/locales/sw.json
@@ -311,6 +311,11 @@
     "singlePerson": "Mtu mmoja",
     "groupOf": "Kundi la watu {{count}}",
     "perPerson": "kwa mtu",
+    "pricingByResidency": "Bei kulingana na makazi",
+    "nationalCitizens": "Raia wa nchi",
+    "eastAfrican": "Watu wa Afrika Mashariki",
+    "foreignTourists": "Wageni wa kimataifa",
+    "residencyNote": "Chagua hali yako ya makazi wakati wa kulipa",
     "yourTourGuide": "Mwongozaji wako",
     "guideIncomplete": "Wasifu wa mwongozaji haujakamilika",
     "guideIncompleteDesc": "Taarifa za mwongozaji hazijakamilika.",
