--- a/src/i18n/locales/zh.json
+++ b/src/i18n/locales/zh.json
@@ -309,8 +309,11 @@
     "priceForTour": "旅游价格",
     "singlePerson": "单人",
     "groupOf": "{{count}} 人团",
-    "perPerson": "每人",
-    "yourTourGuide": "您的导游",
+    "perPerson": "每人",    "pricingByResidency": "按居住地定价",
+    "nationalCitizens": "本国公民",
+    "eastAfrican": "东非居民",
+    "foreignTourists": "外国游客",
+    "residencyNote": "结账时请选择您的居住地状态",    "yourTourGuide": "您的导游",
     "guideIncomplete": "导游资料不完整",
     "guideIncompleteDesc": "导游的个人资料信息不完整。",
     "guideIncompleteHelp": "如需更多导游信息，请联系支持。",
